updated spanish comments to english

--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -16,7 +16,7 @@
            <li v-for = "dia in laborales">{{ dia }}</li>
        </ul> -->
        
-       <!-- Matriz de objetos -->
+       <!-- Objects Array -->
 
        <!-- <ul>
            <li v-for = "(tarea, index) in tareas">
@@ -25,7 +25,7 @@
            </li>
        </ul> -->
 
-       <!-- Objetos -->
+       <!-- Objects -->
        <ul>
             <li v-for = "(value, key, index) in persona">
                 {{ index }} - {{ key }} - {{ value }}
