updated spanish comments to english

--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -16,14 +16,14 @@
             </li>
         </ul>
 
-        <!-- En caso de formulario -->
+        <!-- just in case form -->
         
         <form v-on:submit.prevent = "agregarTarea">
                 <input type = "text" placeholder = "Introduce tu tarea" v-model = "nuevaTarea" >
                 <input type = "submit" value="Enviar tarea">
         </form>
 
-        <!-- En el caso de que no sea un formulario -->
+        <!-- just in case no form -->
 
         <!-- <input type = "text" placeholder = "Introduce tu tarea" v-model = "nuevaTarea" >
         <input type = "button" value="Enviar tarea" v-on:click = "agregarTarea"> -->
